--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
             </div>
         </nav>
     </header>
-    <main class="container-fluid  flex-column justify-content-center align-items-center">
-        <div class="w-100 d-flex flex-column align-items-center justify-content-center">
-            <h1 class="fs-1">HOLA, SOY GERMAIN SEPULVEDA </h1>
-            <p class="fs-3">Soy un programador FullStack, que se especializa en desarrollo de páginas Web y aplicaciones
-                Web. </p>
-            <p class="fs-3">Bienvenido a mi Portafolio, Si te agrada mi trabajo no dude en contactarme.</p>
-            <a href="#projects" class="btn py-4 px-3 fs-2 mt-2 border border-3" id="btn-project">P r o y e c t o s</a>
-            <div class="container mt-3">
+    <main class="d-flex flex-column justify-content-center align-items-center" style="min-height: calc(100vh - 80px);"        <div class="w-100 d-flex flex-column align-items-center justify-content-center">
+            <div class="d-flex flex-column text-center align-items-center">
+                <h1 class="fs-1">HOLA, SOY GERMAIN SEPULVEDA </h1>
+                <p class="fs-3">Soy un programador FullStack, que se especializa en desarrollo de páginas Web y
+                    aplicaciones
+                    Web. </p>
+                <p class="fs-3">Bienvenido a mi Portafolio, Si te agrada mi trabajo no dude en contactarme.</p>
+                <a href="#projects" class="btn py-4 px-3 fs-2 mt-2 border border-3" id="btn-project">P r o y e c t o
+                    s</a>
+            </div>
+            <div class="container mt-5">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-8">
                         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -57,14 +60,16 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="https://cdn.pixabay.com/photo/2015/03/26/00/47/cross-689658_1280.jpg" class="d-block w-100" alt="cruz">
+                                    <img src="https://cdn.pixabay.com/photo/2015/03/26/00/47/cross-689658_1280.jpg"
+                                        class="d-block w-100" alt="cruz">
                                     <div class="carousel-hover-tab text-center">
                                         <p class="fs-2">Página cristiana para poder encontrar el camino hacia Cristo</p>
                                         <a href="#" class="btn btn-carousel fs-2 mt-3">Ir al proyecto</a>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="https://cdn.pixabay.com/photo/2014/05/21/22/28/old-newspaper-350376_640.jpg" class="d-block w-100" alt="...">
+                                    <img src="https://cdn.pixabay.com/photo/2014/05/21/22/28/old-newspaper-350376_640.jpg"
+                                        class="d-block w-100" alt="...">
                                     <div class="carousel-hover-tab text-center">
                                         <p class="fs-2">Noticiero general de la comuna de Combarbalá</p>
                                         <a href="#" class="btn btn-carousel fs-2 mt-3">Ir al proyecto</a>
@@ -87,10 +92,17 @@
             </div>
         </div>
     </main>
-
-
-
-
+    <nav class="social-navbar-mini d-none d-md-flex flex-column align-items-center position-fixed top-50 start-0 translate-middle-y" style="z-index: 1050;">
+        <a href="https://github.com/Eliu2001?tab=repositories" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="GitHub">
+            <i class="bi bi-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="LinkedIn">
+            <i class="bi bi-linkedin"></i>
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="Instagram">
+            <i class="bi bi-instagram"></i>
+        </a>
+    </nav>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-3gJwYp4gk6kFhKk5Q5l5F5r5F5r5F5r5F5r5F5r5F5r5F5r5F5r5F5r5F5" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
