--- a/index.html
+++ b/index.html
@@ -96,15 +96,14 @@
         <a href="https://github.com/Eliu2001?tab=repositories" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="GitHub">
             <i class="bi bi-github"></i>
         </a>
-        <a href="https://www.linkedin.com/" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="LinkedIn">
+        <a href="www.linkedin.com/in/germain-sepulveda-villalobos" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="LinkedIn">
             <i class="bi bi-linkedin"></i>
         </a>
         <a href="https://www.instagram.com/" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="Instagram">
             <i class="bi bi-instagram"></i>
         </a>
     </nav>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-3gJwYp4gk6kFhKk5Q5l5F5r5F5r5F5r5F5r5F5r5F5r5F5r5F5r5F5r5F5" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
