--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
     </header>
-    <main class="d-flex flex-column justify-content-center align-items-center" style="min-height: calc(100vh - 80px);"       
+    <main class="d-flex flex-column justify-content-center align-items-center" style="min-height: calc(100vh - 80px);">     
             <div class="d-flex flex-column text-center align-items-center">
                 <h1 class="fs-1">HOLA, SOY GERMAIN SEPULVEDA </h1>
                 <p class="fs-3">Soy un programador FullStack, que se especializa en desarrollo de páginas Web y
@@ -96,7 +96,7 @@
         <a href="https://github.com/Eliu2001?tab=repositories" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="GitHub">
             <i class="bi bi-github"></i>
         </a>
-        <a href="" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/germain-sepulveda-villalobos/" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="LinkedIn">
             <i class="bi bi-linkedin"></i>
         </a>
         <a href="https://www.instagram.com/" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="Instagram">
