--- a/index.html
+++ b/index.html
@@ -120,7 +120,32 @@
     <section id="contact" class="contact-section d-flex flex-column justify-content-center align-items-center">
         <div class="container contact-content">
             <h2 class="text-center mb-4">Contacto</h2>
-            <p class="fs-5 text-center">¿Tienes un proyecto en mente? ¡Ponte en contacto conmigo!</p>
+            <p class="fs-5 text-center mb-4">¿Tienes un proyecto en mente? ¡Ponte en contacto conmigo!</p>
+            
+            <form id="contact-form" class="contact-form">
+                <div class="row g-3">
+                    <div class="col-md-6">
+                        <label for="contact-name" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="contact-name" name="name" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="contact-email" class="form-label">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="contact-email" name="email" required>
+                    </div>
+                    <div class="col-12">
+                        <label for="contact-subject" class="form-label">Asunto</label>
+                        <input type="text" class="form-control" id="contact-subject" name="subject" required>
+                    </div>
+                    <div class="col-12">
+                        <label for="contact-message" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="contact-message" name="message" rows="6" required></textarea>
+                    </div>
+                    <div class="col-12 text-center">
+                        <button type="submit" class="btn btn-primary btn-lg" id="contact-submit">Enviar Mensaje</button>
+                        <div id="contact-status" class="mt-3" role="status" aria-live="polite"></div>
+                    </div>
+                </div>
+            </form>
         </div>
     </section>
     <nav class="social-navbar-mini d-none d-md-flex flex-column align-items-center position-fixed top-50 start-0 translate-middle-y" style="z-index: 1050;">
