mejorar diseño de la sección Home: ajustar botón de proyectos y optimizar estilos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1 class="fs-1">HOLA, SOY GERMAIN SEPULVEDA</h1>
             <p class="fs-3">Soy un programador FullStack, que se especializa en desarrollo de páginas Web y aplicaciones Web.</p>
             <p class="fs-3">Bienvenido a mi Portafolio, Si te agrada mi trabajo no dude en contactarme.</p>
-            <a href="#projects" class="btn py-4 px-3 fs-2 mt-4 border border-3" id="btn-project">P r o y e c t o s</a>
+            <a href="#projects" class="btn py-2 px-4 fs-4 mt-4" id="btn-project">Proyectos</a>
         </div>
     </section>
     
