--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="container-fluid px-0">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand fs-2 mx-4" href="#home">GERMAIN</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
