mejorar diseño: ajustar estilos y alineación de los íconos en la navbar social

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
         </div>
     </section>
     <nav class="social-navbar-mini d-none d-md-flex flex-column align-items-center position-fixed top-50 start-0 translate-middle-y" style="z-index: 1050;">
-        <a href="https://github.com/Eliu2001?tab=repositories" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="GitHub">
+        <a href="https://github.com/Eliu2001?tab=repositories" target="_blank" class="text-dark social-icon" aria-label="GitHub">
             <i class="bi bi-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/germain-sepulveda-villalobos/" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/germain-sepulveda-villalobos/" target="_blank" class="text-dark social-icon" aria-label="LinkedIn">
             <i class="bi bi-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/" target="_blank" class="my-1 text-dark fs-2 social-icon" aria-label="Instagram">
+        <a href="https://www.instagram.com/" target="_blank" class="text-dark social-icon" aria-label="Instagram">
             <i class="bi bi-instagram"></i>
         </a>
     </nav>
