--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
                         <label for="contact-message" class="form-label">Mensaje</label>
                         <textarea class="form-control" id="contact-message" name="message" rows="6" required></textarea>
                     </div>
+                    
+                    <!-- Honeypot: campo invisible para atrapar bots -->
+                    <input type="checkbox" name="botcheck" class="d-none" style="display: none;">
+                    
                     <div class="col-12 text-center">
                         <button type="submit" class="btn btn-primary btn-lg" id="contact-submit">Enviar Mensaje</button>
                         <div id="contact-status" class="mt-3" role="status" aria-live="polite"></div>
